# vessels

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt
constants/: __init__.py  constants.py
src/models/: __init__.py  horizontal_elliptical_vessels.py  horizontal_hemispherical_vessels.py  horizontal_torishperical_vessels.py  spherical_tanks.py  vertical_conical_vessels.py  vertical_elliptical_tanks.py  vertical_elliptical_vessels.py  vertical_flat_tanks.py  vertical_hemispherical_tanks.py  vertical_torispherical_tanks.py  vertical_torispherical_vessels.py
tests/: conftest.py  test_instantiation.py  test_validation.py  test_vessels.py
vessels/: _VESSELS.py  __init__.py  constants.py  drawing.py  horizontal_conical_vessels.py  horizontal_elliptical_vessels.py  horizontal_flat_vessels.py  horizontal_hemispherical_vessels.py  horizontal_torishperical_vessels.py  main.py  spherical_tanks.py  vertical_conical_tanks.py  vertical_elliptical_tanks.py  vertical_elliptical_vessels.py  vertical_flat_tanks.py  vertical_flat_vessels.py  vertical_hemispherical_vessels.py  vertical_torispherical_tanks.py  vertical_torispherical_vessels.py  vessels.py  vessels_.py  volume_plot.py
web-app/: package-lock.json  package.json
web-app/app/: page.tsx
web-app/components/drawing/: HorizontalVesselDiagram.tsx  SphericalTankDiagram.tsx  VerticalConicalVesselDiagram.tsx  VerticalEllipticalVesselDiagram.tsx  VerticalFlatVesselDiagram.tsx  VerticalHemisphericalVesselDiagram.tsx  VerticalTorisphericalVesselDiagram.tsx  VesselDiagram.tsx  geometry.ts  index.ts  (+1 more)
(+21 files in other folders)
